# docs/swagger.json
@@ -59,7 +59,7 @@
                 }
             }
         },
-        "/SwaggerDoc": {
+        "/Swagger/index.html": {
             "get": {
                 "description": "returns json needed by Swagger",
                 "produces": [
@@ -68,7 +68,45 @@
                 "tags": [
                     "example"
                 ],
-                "summary": "SwaggerDoc",
+                "summary": "Swagger API",
+                "responses": {
+                    "200": {
+                        "description": "Json data",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/Swagger/swagger.json": {
+            "get": {
+                "description": "returns json needed by Swagger",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "GetSwaggerJson",
                 "responses": {
                     "200": {
                         "description": "Json data",
